--- a/Part_3/handson_3/handson_3b.ipynb
+++ b/Part_3/handson_3/handson_3b.ipynb
@@ -102,17 +102,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "94b37bb3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best hyperparameter values: {'criterion': 'gini', 'max_leaf_nodes': 11}\n"
+     ]
+    }
+   ],
    "source": [
     "params = {}\n",
     "params['criterion'] = ['gini', 'entropy']\n",
     "params['max_leaf_nodes'] = range(2, 21)\n",
     "\n",
     "gs = GridSearchCV(DecisionTreeClassifier(random_state=42), params, cv=5, n_jobs=-1)\n",
-    "gs.fit(X_train, y_train)\n"
+    "gs.fit(X_train, y_train)\n",
+    "print(f\"Best hyperparameter values: {gs.best_params_}\")"
    ]
   },
   {
@@ -131,7 +140,9 @@
    "id": "6a361678",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dtc2 = DecisionTreeClassifier(random_state=42, **gs.best_params_).fit(X_train, y_train)\n"
+   ]
   }
  ],
  "metadata": {
