--- a/Part_3/handson_3/handson_3c.ipynb
+++ b/Part_3/handson_3/handson_3c.ipynb
@@ -55,23 +55,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a3f0b6ab",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(569, 30)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of features: 30\n"
+     ]
     }
    ],
    "source": [
-    "print(f\"Number of feau\")"
+    "print(f\"Number of features: {X.shape[1]}\")"
    ]
   },
   {
@@ -89,7 +86,13 @@
    "id": "89c13b59",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Use spot-checking to evaluate multiple models\n",
+    "models = {}\n",
+    "models['knn'] = KNeighborsClassifier()\n",
+    "models['lgr'] = LogisticRegression()\n",
+    "models['dtc'] = "
+   ]
   },
   {
    "cell_type": "markdown",
