--- a/Part_3/handson_3/handson_3c.ipynb
+++ b/Part_3/handson_3/handson_3c.ipynb
@@ -120,10 +120,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "dd8607c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "knn mean accuracy: 92.967%, std: 2.784%\n",
+      "lgr mean accuracy: 93.844%, std: 3.387%\n",
+      "dtc mean accuracy: 92.442%, std: 0.709%\n"
+     ]
+    }
+   ],
    "source": [
     "fs = SelectKBest(k=10)\n",
     "Xs = fs.fit_transform(X, y)\n",
@@ -148,7 +158,11 @@
    "id": "8585e37c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dr = PCA(n_components=10)\n",
+    "Xr = dr.fit_transform(X)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
