--- a/Part_3/handson_3/handson_3d.ipynb
+++ b/Part_3/handson_3/handson_3d.ipynb
@@ -132,7 +132,16 @@
    "id": "d1944d72",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split as split\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "X = df.values[:, 1:-1]\n",
+    "y = df.values[:, -1]\n",
+    "X_train, X_test, y_train, y_test = split(X, y, test_size=0.25, random_state=42)\n",
+    "\n",
+    "knn = KNeighborsClassifier().fit(X_train, y_train)"
+   ]
   }
  ],
  "metadata": {
